--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.0.1'
-    testCompile 'junit:junit:4.12'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.android.support:design:25.3.0'
+    compile 'com.google.android.gms:play-services:7.3.0'
+
+    testCompile 'junit:junit:4.12'
 }
