--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:icon="@mipmap/icon"
         android:label="InTouch"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".main_sign_in"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".main_home_page"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,7 +24,7 @@
         </activity>
         <activity android:name=".Main_otp_code" />
         <activity android:name=".Main_sign_up" />
-        <activity android:name=".main_home_page" />
+        <activity android:name=".main_sign_in" />
         <activity android:name=".startup"></activity>
         <activity android:name=".Place_picker"/>
         <activity android:name=".Select_event_image"/>
